[gd_scene format=4 uid="uid://p0nmnj01fn14"]

[ext_resource type="Script" uid="uid://bcm0sptx2jago" path="res://level.gd" id="1_i2t4f"]
[ext_resource type="Script" uid="uid://dqi60rwnd7vbj" path="res://bglevel.gd" id="1_km5ld"]
[ext_resource type="PackedScene" uid="uid://urlug5udljcf" path="res://Player/player.tscn" id="1_u52ul"]
[ext_resource type="Texture2D" uid="uid://dp0ek7pjewck4" path="res://Asset/background/nature_5/1.png" id="2_1ainy"]
[ext_resource type="Texture2D" uid="uid://dusj0sjlgmoo4" path="res://Asset/background/nature_5/2.png" id="3_n6hdu"]
[ext_resource type="Texture2D" uid="uid://bshdc1s34nbkg" path="res://Asset/background/nature_5/3.png" id="4_km5ld"]
[ext_resource type="Texture2D" uid="uid://7uos8a8xec10" path="res://Asset/background/nature_5/4.png" id="5_i2t4f"]
[ext_resource type="Texture2D" uid="uid://cfne4n7n08u4q" path="res://Asset/Tileset/Tileset Spring.png" id="6_8cye3"]
[ext_resource type="Script" uid="uid://big5205fa1xs5" path="res://chest.gd" id="10_aicyk"]
[ext_resource type="PackedScene" uid="uid://cor2i0p7ptt0p" path="res://portal.tscn" id="11_2orkt"]
[ext_resource type="Texture2D" uid="uid://duo35vjfgw0do" path="res://Asset/Tileset/New Piskel (3).png" id="11_aicyk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2orkt"]
texture = ExtResource("6_8cye3")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
11:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
10:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:16/0 = 0
11:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
11:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0

[sub_resource type="TileSet" id="TileSet_aicyk"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_2orkt")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2orkt"]
size = Vector2(78, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_aicyk"]
atlas = ExtResource("11_aicyk")

[node name="Level" type="Node2D" unique_id=2064921065]
script = ExtResource("1_i2t4f")

[node name="BG" type="ParallaxBackground" parent="." unique_id=1178864022]
script = ExtResource("1_km5ld")

[node name="ParallaxLayer" type="ParallaxLayer" parent="BG" unique_id=333071403]
motion_mirroring = Vector2(1152.92, 0)

[node name="1" type="Sprite2D" parent="BG/ParallaxLayer" unique_id=505267821]
position = Vector2(576.49994, 324.50003)
scale = Vector2(2.001736, 1.9969136)
texture = ExtResource("2_1ainy")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="BG" unique_id=45920455]
motion_mirroring = Vector2(1152.92, 0)

[node name="1" type="Sprite2D" parent="BG/ParallaxLayer2" unique_id=1816346125]
position = Vector2(576, 325)
scale = Vector2(2.001736, 1.9969136)
texture = ExtResource("3_n6hdu")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="BG" unique_id=249702062]
motion_mirroring = Vector2(1152.92, 0)

[node name="1" type="Sprite2D" parent="BG/ParallaxLayer3" unique_id=299914222]
position = Vector2(576.49994, 324.50003)
scale = Vector2(2.001736, 1.9969136)
texture = ExtResource("4_km5ld")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="BG" unique_id=1027864140]
motion_mirroring = Vector2(1152.92, 0)

[node name="1" type="Sprite2D" parent="BG/ParallaxLayer4" unique_id=1822766141]
position = Vector2(576.49994, 324.50003)
scale = Vector2(2.001736, 1.9969136)
texture = ExtResource("5_i2t4f")

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=495358490]
tile_map_data = PackedByteArray("AAABACgAAAAKABAAAAACACgAAAAKABAAAAADACgAAAAKABAAAAAEACgAAAAKABAAAAAFACgAAAAKABAAAAAGACgAAAAKABAAAAAHACgAAAAKABAAAAAIACgAAAAKABAAAAAJACgAAAAKABAAAAAKACgAAAAKABAAAAALACgAAAAKABAAAAAMACgAAAAKABAAAAANACgAAAAKABAAAAAOACgAAAAKABAAAAAPACgAAAAKABAAAAAQACgAAAAKABAAAAARACgAAAAKABAAAAASACgAAAAKABAAAAATACgAAAAKABAAAAAUACgAAAAKABAAAAAVACgAAAAKABAAAAAWACgAAAAKABAAAAAXACgAAAAKABAAAAAYACgAAAAKABAAAAAZACgAAAAKABAAAAAaACgAAAAKABAAAAAbACgAAAAKABAAAAAcACgAAAAKABAAAAAdACgAAAAKABAAAAAeACgAAAAKABAAAAAfACgAAAAKABAAAAAgACgAAAAKABAAAAAhACgAAAAKABAAAAAiACgAAAAKABAAAAAjACgAAAAKABAAAAAkACgAAAAKABAAAAAlACgAAAAKABAAAAAmACgAAAAKABAAAAAnACgAAAAKABAAAAAoACgAAAAKABAAAAApACgAAAAKABAAAAAqACgAAAAKABAAAAArACgAAAAKABAAAAAsACgAAAAKABAAAAAtACgAAAAKABAAAAAuACgAAAAKABAAAAAvACgAAAAKABAAAAAwACgAAAAKABAAAAAxACgAAAAKABAAAAAyACgAAAAKABAAAAAzACgAAAAKABAAAAA0ACgAAAAKABAAAAA1ACgAAAAKABAAAAA2ACgAAAAKABAAAAA3ACgAAAAKABAAAAA4ACgAAAAKABAAAAA5ACgAAAAKABAAAAA8ACgAAAAKABAAAAA9ACgAAAAKABAAAABGACgAAAAKABAAAABHACgAAAAKABAAAAAAACgAAAAKABAAAABIACgAAAALAAAAAABIACcAAAALAAAAAABIACYAAAALAAAAAABIACUAAAALAAAAAABIACQAAAALAAAAAABIACMAAAALAAAAAABIACIAAAALAAAAAABIACEAAAALAAAAAABIACAAAAALAAAAAABIAB8AAAALAAAAAABIAB4AAAALAAAAAABIAB0AAAALAAAAAABIABwAAAALAAAAAABIABsAAAALAAAAAABIABoAAAALAAAAAABIABkAAAALAAAAAABIABgAAAALAAAAAABIABcAAAALAAAAAABIABYAAAALAAAAAABIABUAAAALAAAAAABIABQAAAALAAAAAAD//ygAAAALAAAAAAD//ycAAAALAAAAAAD//yYAAAALAAAAAAD//yUAAAALAAAAAAD//yQAAAALAAAAAAD//yMAAAALAAAAAAD//yIAAAALAAAAAAD//yEAAAALAAAAAAD//yAAAAALAAAAAAD//x8AAAALAAAAAAD//x4AAAALAAAAAAD//x0AAAALAAAAAAD//xwAAAALAAAAAAD//xsAAAALAAAAAAD//xoAAAALAAAAAAD//xkAAAALAAAAAAD//xgAAAALAAAAAAD//xcAAAALAAAAAAD//xYAAAALAAAAAAA7ACgAAAAKABAAAABEACgAAAAKABAAAABFACgAAAAKABAAAABDACgAAAAKABAAAABCACgAAAAKABAAAAA+ACgAAAAKABAAAAA/ACgAAAAKABAAAABAACgAAAAKABAAAABBACgAAAAKABAAAAA4ACUABQABAAIAAAA4ACYABQABAAMAAAA4ACcABQABAAQAAAA5ACUABQACAAIAAAA5ACYABQACAAMAAAA5ACcABQACAAQAAAA6ACUABQADAAIAAAA6ACYABQADAAMAAAA6ACcABQADAAQAAAA6ACgAAAAKABAAAAA=")
tile_set = SubResource("TileSet_aicyk")

[node name="Player" type="Node2D" parent="." unique_id=1979248858]

[node name="Player" parent="Player" unique_id=1149179039 instance=ExtResource("1_u52ul")]
position = Vector2(179, 619)

[node name="Mobs" type="Node2D" parent="." unique_id=129637014]

[node name="EnemySpawn" type="Marker2D" parent="Mobs" unique_id=1242182874]
position = Vector2(849, 619)

[node name="Chest" type="Area2D" parent="." unique_id=79635831]
script = ExtResource("10_aicyk")
prompt_text = "Нажмите на у"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chest" unique_id=257307204]
position = Vector2(934, 617)
shape = SubResource("RectangleShape2D_2orkt")

[node name="Sprite2D" type="Sprite2D" parent="Chest" unique_id=911513012]
position = Vector2(935.00006, 622)
scale = Vector2(0.8281238, 0.8281238)
texture = SubResource("AtlasTexture_aicyk")

[node name="Label" type="Label" parent="Chest" unique_id=1315923838]
offset_left = 908.0
offset_top = 601.0
offset_right = 953.0
offset_bottom = 613.0
theme_override_font_sizes/font_size = 8
text = "Нажмите У"

[node name="Portal" parent="." unique_id=2002202352 instance=ExtResource("11_2orkt")]
position = Vector2(1097, 620)
collision_mask = 1

[node name="HUD" type="CanvasLayer" parent="." unique_id=1534800655]

[node name="HPLabel" type="Label" parent="HUD" unique_id=512885788]
offset_right = 40.0
offset_bottom = 23.0

[node name="GoldLabel" type="Label" parent="HUD" unique_id=2096366251]
offset_left = 145.0
offset_right = 185.0
offset_bottom = 23.0

[node name="FloorLabel" type="Label" parent="HUD" unique_id=1767283050]
offset_left = 285.0
offset_right = 345.0
offset_bottom = 23.0

[connection signal="hit_enemy" from="Player/Player" to="." method="_on_player_hit_enemy"]
[connection signal="body_entered" from="Portal" to="." method="_on_portal_body_entered"]
